<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:constraint_referenced_ids="progress_bar1, txt_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ProgressBar
            android:id="@+id/progress_bar1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/internet"
            android:visibility="gone"/>

        <ScrollView

            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/linearLayout">


                <ImageView

                    android:id="@+id/house_thumbnail1"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/gryffindor"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/item_house_name1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/plot_linear"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView

                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:srcCompat="@drawable/harrypotter" />

                        <TextView
                            android:id="@+id/item_founder1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/founder"
                            android:textSize="20sp"
                            android:textStyle="bold" />



                    </LinearLayout>




                    <LinearLayout
                        android:id="@+id/plot_actors"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView

                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:srcCompat="@drawable/team" />


                        <TextView
                            android:id="@+id/item_mascot1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/mascot"
                            android:textSize="20sp"
                            android:textStyle="bold" />


                    </LinearLayout>





                    <LinearLayout
                        android:id="@+id/lan_linear"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <ImageView

                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:srcCompat="@drawable/school" />

                        <TextView
                            android:id="@+id/item_school1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/school"
                            android:textSize="20sp"
                            android:textStyle="bold" />



                    </LinearLayout>






                    <LinearLayout
                        android:id="@+id/rated_linear"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView

                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:srcCompat="@drawable/ic_snowing" />


                        <TextView
                            android:id="@+id/item_head_house1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/headofhouse"
                            android:textSize="20sp"
                            android:textStyle="bold" />



                    </LinearLayout>




                    <LinearLayout
                        android:id="@+id/production_linear"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView

                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:srcCompat="@drawable/ghost" />

                        <TextView

                            android:id="@+id/item_ghost1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/houseghost"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>





                    <TextView
                        android:id="@+id/hardcodedRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Members"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/rate_linear"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <Button
                            android:id="@+id/btnViewMembers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/circlebutton"
                            android:text="View All Members"></Button>


                    </LinearLayout>






                </LinearLayout>


            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>