<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:constraint_referenced_ids="progress_bar1, txt_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ProgressBar
            android:id="@+id/progress_bar_member"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/internet"
            android:visibility="gone"/>

        <ScrollView

            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/linearLayout">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/item_member_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bathsheda Babbling"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/plot_linear"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView

                            android:layout_width="30dp"
                            android:layout_height="30dp"

                            app:srcCompat="@drawable/superhero" />

                        <TextView

                            android:id="@+id/item_role2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="Role"
                            android:textSize="20sp"
                            android:textStyle="bold" />



                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/plot_actors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView

                            android:layout_width="30dp"
                            android:layout_height="30dp"

                            app:srcCompat="@drawable/blood_drop" />


                        <TextView
                            android:id="@+id/item_member_blood2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/blood_status"
                            android:textSize="20sp"
                            android:textStyle="bold" />


                    </LinearLayout>



                    <LinearLayout
                        android:id="@+id/lan_linear"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <ImageView

                            android:layout_width="30dp"
                            android:layout_height="30dp"

                            app:srcCompat="@drawable/school" />

                        <TextView
                            android:id="@+id/item_member_school2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/school"
                            android:textSize="20sp"
                            android:textStyle="bold" />



                    </LinearLayout>




                    <TextView
                        android:id="@+id/movie_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="14sp"
                        />

                    <LinearLayout
                        android:id="@+id/rated_linear"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView

                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            app:srcCompat="@drawable/ic_magic_wand" />


                        <TextView
                            android:id="@+id/item_member_ministry2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/ministry_of_magic"
                            android:textSize="20sp"
                            android:textStyle="bold" />



                    </LinearLayout>




                    <TextView
                        android:id="@+id/movie_allowed_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="14sp"
                        />

                    <LinearLayout
                        android:id="@+id/production_linear"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView

                            android:layout_width="30dp"
                            android:layout_height="30dp"

                            app:srcCompat="@drawable/ghost" />

                        <TextView

                            android:id="@+id/item_member_species2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Species"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>



                    <TextView
                        android:layout_marginLeft="5dp"
                        android:id="@+id/movie_production"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="14sp"
                        />

                    <LinearLayout
                        android:id="@+id/rate_linear"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>






                </LinearLayout>


            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>